Prepare for more command sources